# tiva-c-series-cmake-example

./: CMakeLists.txt  README.md
cmake/: arm-none-eabi-toolchain.cmake
src/: blinky.c
